syntax = "proto3";

package users;

service UsersService {
  rpc Health(HealthReq) returns (HealthRes) {}

  rpc CreateUser(CreateUserReq) returns (CreateUserRes) {}
}

message HealthReq {}

message HealthRes {
  int32 status = 1;
}

message CreateUserReq {
  string email = 1;
  string password = 2;
}

message UserCreated {
  string id = 1;
  string email = 2;
  string password = 3;
}

message CreateUserRes {
  bool success = 1;
  int32 status = 2;
  UserCreated data = 3;
  string message = 4;
  string error = 5;
}
