syntax = "proto3";

package auth;

service AuthService {
  rpc ValidateJwt (AuthJwt) returns (AuthUser) {}
  rpc GenerateJwt(GenerateJwt) returns (AuthJwt) {}
  rpc Register(Register) returns (AuthUser) {}
  rpc Login(Login) returns (AuthUser) {}
}

message Register {
  string email = 1;
  string password = 2;
}

message Login {
  string email = 1;
  string password = 2;
}

message GenerateJwt {
  string id = 1;
}

message AuthJwt {
  string jwt = 1;
}

message Auth {
  string accessToken = 1;
}

message AuthUser {
  User user = 1;
  Auth auth = 2;
}

message User {
  string id = 1;
  string email = 2;
  string lastLogin = 3;
  string avatar = 4;
  Profile profile = 5;
  string createdAt = 6;
  string updatedAt = 7;
}

message Profile {
  string firstName = 1;
  string lastName = 2;
  string otherNames = 3;
  string phone = 4;
  string address = 5;
}

message LoginResponse {

}
